update properties and log